# prime_zhang_peizhi

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prime_<pz2277>/: __init__.py  prime_<pz2277>.py
tests/: test_prime_<pz2277>.py
