[tool.poetry]
name = "prime_<pz2277>"
version = "0.1.0"
description = "A python package for checking prime numbers and perform related calculations."
authors = ["Peizhi Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
